Bug 1752282 [Linux] Mark VideoFrameSurface as used in VideoFramePool::GetVideoFrameSurface() r=alwu,media-playback-reviewers

- Right now we mark VideoFrameSurface as used in VideoFrameSurface constructor (for newly created surfaces) and in
  GetFreeVideoFrameSurface() for recycled ones.
  In this patch we remove them and mark it as used in VideoFramePool::GetVideoFrameSurface() for both cases
  when VideoFrameSurface is really used.
- Call av_buffer_unref() only if VideoFrameSurface is locked, i.e. we have valid mAVHWFramesContext/mHWAVBuffer.

Differential Revision: https://phabricator.services.mozilla.com/D137142